--- a/styles/despachos.css
+++ b/styles/despachos.css
@@ -88,13 +88,11 @@
   
 }
 
-
-
 /* Tabla de Despachos */
 
 .titulo {
   padding-bottom: 15px;
-  background: #10518C;
+  background: #034076;
   color: #fff;
   padding: 16px 30px;
   margin: -20px -25px 10px;
