--- a/styles/eventos.css
+++ b/styles/eventos.css
@@ -94,7 +94,7 @@
   
   .titulo {
     padding-bottom: 15px;
-    background: #10518C;
+    background: #832f2d;
     color: #fff;
     padding: 16px 30px;
     margin: -20px -25px 10px;
