--- a/styles/login.css
+++ b/styles/login.css
@@ -27,7 +27,7 @@ body{
   font-size: 14px;
   height: 40px;
   text-align: center;
-  border-bottom: 1px solid;
+  border-bottom:  90%;
 }
 .formulario h5{
   margin: 0;
@@ -81,3 +81,84 @@ body{
   transition: 0.25s; 
 
 }
+
+
+
+
+
+
+form{
+	padding-top: 10px;
+	font-size: 14px;
+	margin-top: 30px;
+}
+
+
+.global-container{
+	height:100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: #ffffff;
+}
+
+.card-title{ font-weight:300; }
+
+.btn{
+	font-size: 14px;
+	margin-top:20px;
+}
+
+
+.login-form{ 
+	width:330px;
+	margin:20px;
+}
+
+.sign-up{
+	text-align:center;
+	padding:20px 0 0;
+}
+
+.alert{
+	margin-bottom:-30px;
+	font-size: 13px;
+	margin-top:20px;
+}
+.modal-dialog{
+  padding: 10px;
+}
+
+.form-control {
+  height: 41px;
+  background: #f2f2f2;
+  box-shadow: none !important;
+  border: none;
+  }
+  .form-control:focus {
+  background: #e2e2e2;
+  }
+  .form-control, .btn {        
+  border-radius: 3px;
+  }
+  .signup-form {
+  width: 400px;
+  margin: 30px auto;
+  }
+  .signup-form form {
+  color: #999;
+  border-radius: 3px;
+  margin-bottom: 15px;
+  background: #fff;
+  box-shadow: 0px 2px 2px rgba(255, 255, 255, 0.3);
+  padding: 30px;
+  }
+  .signup-form h2  {
+  color: #333;
+  font-weight: bold;
+  margin-top: 0;
+  }
+  .signup-form form a {
+  color: #dc3535;
+  text-decoration: none;
+  }
