se quita los textos de ejemplo

--- a/styles/quienessomos.css
+++ b/styles/quienessomos.css
@@ -21,6 +21,7 @@
     margin: 8rem 3rem;
     /* align-items: center; */
     text-align: center;
+    font-size: 20px;
 }
 .sobre-nosotros-2 .text-sobre-nosotros article{
     padding: 3rem 0rem;
