ajuste tamaño de letra

--- a/styles/quienessomos.css
+++ b/styles/quienessomos.css
@@ -11,6 +11,7 @@
     margin: 12rem 3rem;
     /* align-items: center; */
     text-align: center;
+    font-size: 20px;
 }
 .sobre-nosotros-2{
     display: flex;
